--- a/.github/workflows/semver-tag.yaml
+++ b/.github/workflows/semver-tag.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false  # Avoid credential conflicts for tagging
 
       - name: Setup Git
         run: |
@@ -23,9 +24,8 @@ jobs:
           git config user.email "action@github.com"
 
       - name: Bump version and create tag
-        uses: anothrNick/github-tag-action@1.67.0
+        uses: anothrNick/github-tag-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           default_bump: patch
           release_branches: main
-          create_annotated_tag: true
